# dcc012-lab02-sorting

./: .gitignore  CMakeLists.txt  README.md
include/: estudante.h  siga.h  sort.h
siga/include/: siga.h  sort.h
siga/src/: estudante.cc  siga.cc
src/: siga.cc
tests/: test1.cc  test2.cc  test3.cc  test4.cc  test5.cc  test6.cc  test7.cc  test8.cc
